setting NA to 0 in recommendations

--- a/1_new_complete_data_analysis/R/analysis_09_20_data/base_panel_analysis.Rmd
+++ b/1_new_complete_data_analysis/R/analysis_09_20_data/base_panel_analysis.Rmd
@@ -13,6 +13,9 @@ d <- read_csv("../../data_from_w_sept_20/data_with_inf_and_unemp.csv")
 remove <- c("Country.y", "iso2c", "MS.MIL.XPND.CN")
 d <- d[, !(names(d) %in% remove)]
 
+## make sure replacing NA with 0 is OK here.
+d$Recommendations[is.na(d$Recommendations)] <- 0.01
+
 ## calculate % mentions for each topic by country/year group------
 
 d <- d %>%
